tests/transpiler/x/hs/list_set_ops.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/list_set_ops.hs:8:12: error:
    • Couldn't match expected type ‘[a4]’ with actual type ‘Int’
    • In the first argument of ‘(++)’, namely ‘length [1, 2]’
      In the first argument of ‘print’, namely
        ‘(length [1, 2] ++ [2, 3])’
      In a stmt of a 'do' block: print (length [1, 2] ++ [2, 3])
  |
8 |     print (length [1, 2] ++ [2, 3])
  |            ^^^^^^^^^^^^^
