tests/transpiler/x/hs/list_set_ops.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-20 01:18 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
main :: IO ()
main = do
    print ([1, 2] `union` [2, 3])
    print ([1, 2, 3] \\ [2])
    print ([1, 2, 3] `intersect` [2, 4])
    print (length [1, 2] ++ [2, 3])
